# Task-manager

./: .env.sample  .gitignore  Makefile  README.md  messages.py  pyproject.toml  requirements  requirements.txt  testenv.py
.github/workflows/: django.yml
labels/: tests.py  views.py
locale/en_us/LC_MESSAGES/: django.mo  django.po
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: tests.py  views.py
task_manager/: Mixin.py  db.sqlite3  mixin.py  mydatabase  requirements  settings.py  urls.py  views.py
task_manager/fixtures/: tasks.json  test_task1.json
task_manager/labels/: tests.py  urls.py  views.py
task_manager/main/: urls.py  views.py
task_manager/statuses/: views.py
task_manager/task_manager/: settings.py  urls.py
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0002_remove_task_labels_delete_labelfortask_task_labels.py  (+2 more)
task_manager/templates/: base.html  create.html  index.html  login.html  login_new.html  logout.html  registration.html  sign_in.html  users.html
task_manager/users/: forms.py  models.py  serializers.py  tests.py  urls.py  views.py
tasks/: filters.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py
templates/: base.html
templates/labels/: delete.html  update.html
templates/statuses/: create.html  delete.html  update.html
templates/task_manager/: index.html  login.html  logout.html
templates/tasks/: delete.html  index.html  update.html
templates/users/: delete.html  update.html  users.html
users/: tests.py  urls.py  views.py
(+13 files in other folders)
