[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["M1RRoN <mds.myst@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[build]
builder = "NIXPACKS"

[deploy]
startCommand = "gunicorn task_manager.wsgi"
restartPolicyType = "ON_FAILURE"
restartPolicyMaxRetries = 10