[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Simple task manager"
authors = ["M1RRoN <mds.myst@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
setuptools = "^65.6.3"
django = "^4.1.4"
psycopg2 = "^2.9.5"
django-bootstrap-v5 = "^1.0.11"
django-filter = "^22.1"
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[build]
builder = "NIXPACKS"

[deploy]
startCommand = "gunicorn task_manager.wsgi"
restartPolicyType = "ON_FAILURE"
restartPolicyMaxRetries = 10
